# field_local_planner

./: .clang-format  .gitignore  README.md
field_local_planner/: CMakeLists.txt  package.xml
field_local_planner_base/field_local_planner_base/: CMakeLists.txt  package.xml
field_local_planner_base/field_local_planner_base/include/field_local_planner_base/: base_local_planner.hpp  basic_types.hpp  local_planner.hpp  profiler.hpp  timer.hpp  utils.hpp
field_local_planner_base/field_local_planner_base_plugin/: CMakeLists.txt  package.xml
field_local_planner_base/field_local_planner_base_plugin/dynamic_reconfigure/: Base.cfg
field_local_planner_msgs/: CMakeLists.txt  README.md  package.xml
field_local_planner_msgs/action/: MoveTo.action  NewGoal.action
field_local_planner_msgs/msg/: Status.msg
field_local_planner_ros/: CMakeLists.txt  package.xml
field_local_planner_ros/config/: rmp.yaml
field_local_planner_ros/config/rviz/: view.rviz
field_local_planner_ros/include/field_local_planner_ros/: local_planner_handler.hpp  local_planner_ros.hpp
field_local_planner_ros/launch/: falco.launch  local_planner.launch.xml  rmp.launch  rviz.launch  trackline.launch
field_local_planner_ros/scripts/: action_client.py  carrot_publisher.py  move_base_bridge.py  move_base_simple.py
field_local_planner_ros/src/: local_planner_node.cpp
field_local_planner_ros/src/field_local_planner_ros/: local_planner_handler.cpp  local_planner_ros.cpp
field_local_planners/: CMakeLists.txt  package.xml
field_local_planners/field_local_planner_apf/field_local_planner_apf_plugin/: CMakeLists.txt  field_local_planner_plugin.xml  package.xml
field_local_planners/field_local_planner_base/field_local_planner_base/: CMakeLists.txt
field_local_planners/field_local_planner_base/field_local_planner_base_plugin/: CMakeLists.txt  package.xml
field_local_planners/field_local_planner_falco/field_local_planner_falco/: CMakeLists.txt  package.xml
field_local_planners/field_local_planner_falco/field_local_planner_falco_plugin/: CMakeLists.txt  field_local_planner_plugin.xml  package.xml
field_local_planners/field_local_planner_rmp/field_local_planner_rmp/: CMakeLists.txt  package.xml
field_local_planners/field_local_planner_rmp/field_local_planner_rmp_plugin/: CMakeLists.txt  field_local_planner_plugin.xml  package.xml
field_local_planners/field_local_planner_rmp/rmp/: CMakeLists.txt  README.md  package.xml
field_local_planners/field_local_planner_rmp/rmp/src/: rmp.cpp
field_local_planners/field_local_planner_trackline/field_local_planner_trackline/: CMakeLists.txt  package.xml
field_local_planners/field_local_planner_trackline/field_local_planner_trackline_plugin/: CMakeLists.txt  field_local_planner_plugin.xml  package.xml
field_local_planners/include/field_local_planners/: base_local_planner.hpp  utils.hpp
field_local_planners/src/field_local_planners/: base_local_planner.cpp
field_local_planners_msgs/: CMakeLists.txt  package.xml
field_local_planners_ros/: CMakeLists.txt  package.xml
field_local_planners_ros/include/field_local_planners_ros/: local_planner_handler.hpp
field_local_planners_ros/python/: carrot_publisher.py
field_local_planners_ros/src/: local_planner_node.cpp
field_local_planners_ros/src/field_local_planners_ros/: local_planner_handler.cpp
local_planners_drs_ros/: CMakeLists.txt  local_planners_drs_plugins.xml  package.xml
local_planners_drs_ros/include/local_planners_drs_ros/: base_plugin.hpp
local_planners_drs_ros/src/: local_planner_node.cpp
local_planners_drs_ros/src/local_planners_drs_ros/: base_plugin.cpp  local_planner_node.cpp
locally_reactive_controller/: .gitignore  CMakeLists.txt  package.xml
locally_reactive_controller/action/: LocallyReactiveController.action
locally_reactive_controller/config/filter_chain/: filter_chain.yaml  filter_chain_jackal.yaml  filter_chain_original.yaml  filter_chain_wifi.yaml  visualizations.yaml
locally_reactive_controller/config/rqt_multiplot/: rqt_multiplot.xml  rqt_multiplot_extrm.xml  rqt_multiplot_subt.xml
locally_reactive_controller/config/rviz/: controller.rviz  coyote_sim.rviz  default.rviz
locally_reactive_controller/config/teleop_twist_joy/: xbox.config.yaml
locally_reactive_controller/dynamic_reconfigure/: FalcoController.cfg  LocallyReactiveController.cfg  RmpController.cfg
locally_reactive_controller/include/locally_reactive_controller/: manager.hpp  visualizer.hpp
locally_reactive_controller/launch/: controller.launch  controller_extrm.launch  controller_extrm_sim.launch  controller_jackal_sim.launch  controller_original.launch  joystick_teleop.launch  record_rosbag_extrm.launch  throttle_collision_map.launch  view.launch
locally_reactive_controller/python/: carrot_publisher.py
locally_reactive_controller/src/locally_reactive_controller/: manager.cpp  node.cpp  visualizer.cpp
locally_reactive_controller_evaluation/: CMakeLists.txt  package.xml  setup.py
locally_reactive_controller_evaluation/config/rviz/: controller.rviz  controller_batcave.rviz
locally_reactive_controller_evaluation/config/test_trajectories/: test_trajectory.csv  test_trajectory_old.csv
locally_reactive_controller_evaluation/launch/: controller_falco.launch  controller_gdf_only.launch  controller_potential_field.launch  controller_rmp.launch  controller_rmp_euclidean_obstacle.launch  controller_rmp_gdf_obstacle.launch  controller_rmp_no_damping.launch  controller_rmp_no_regularization.launch  publish_trajectories.launch  publish_trajectories_all.launch  spawn_obstacles.launch
locally_reactive_controller_evaluation/launch/deprecated/: publish_trajectories copy.launch  publish_trajectories_rmp.launch
locally_reactive_controller_evaluation/models/: obstacles.sdf  obstacles.urdf  obstacles.urdf.xacro  single_obstacle.urdf.xacro
locally_reactive_controller_evaluation/src/: anymal_simulation_experiment.py
locally_reactive_controller_evaluation/src/locally_reactive_controller_evaluation/: robot_geometry.py  test_trajectory.py
locally_reactive_controller_msgs/: CMakeLists.txt  package.xml
(+149 files in other folders)
