<?xml version="1.0"?>
<package format="2">
  <name>field_local_planner_ros</name>
  <version>0.0.0</version>

  <description>ROS node for field_local_planner</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Catkin packages -->
  <depend>actionlib</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>field_local_planner_base</depend>
  <depend>field_local_planner_base_plugin</depend>
  <depend>field_local_planner_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>

</package>
