<?xml version="1.0"?>
<package format="2">
  <name>local_planners_drs_ros</name>
  <version>0.0.0</version>

  <description>Implementation of local planners used in DRS</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Catkin packages -->
  <depend>local_planners_drs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <!-- Plugins -->
  <export>
    <local_planners_drs plugin="${prefix}/local_planners_drs_plugins.xml" />
  </export>

</package>
