<?xml version="1.0"?>
<package format="2">
  <name>locally_reactive_controller</name>
  <version>0.0.0</version>

  <description>Perceptive version of the position controller</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>eigen_utils</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>joy_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_filters</depend>
  <depend>grid_map_cv</depend>
  <!-- depend>grid_map_sdf</depend -->
  <depend>grid_map_msgs</depend>
  <exec_depend>grid_map_filters_drs</exec_depend>
  <depend>rmp</depend>
  <depend>locally_reactive_controller_msgs</depend>
  <!-- No catkin packages -->
  <depend>gtsam</depend>
</package>
