<?xml version="1.0"?>
<package format="2">
  <name>locally_reactive_controller_evaluation</name>
  <version>0.0.0</version>

  <description>Evaluation tools for the Locally Reactive controller</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>locally_reactive_controller_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>any_gazebo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>position_controller_anymal</depend>
</package>
