<?xml version="1.0"?>
<package format="2">
  <name>field_local_planner_base</name>
  <version>0.0.0</version>

  <description>Base field local planner, implementing common operations and interfaces</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Catkin packages -->
  <depend>grid_map_core</depend>

  <!-- Non-catkin packages -->
  <depend>gtsam</depend>

</package>
