<?xml version="1.0"?>
<package format="2">
  <name>field_local_planner_apf_plugin</name>
  <version>0.0.0</version>

  <description>ROS Plugin for Artificial Potential Field Local Planner</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Catkin packages -->
  <depend>dynamic_reconfigure</depend>
  <depend>field_local_planner_base_plugin</depend>
  <depend>field_local_planner_rmp</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <!-- Plugins -->
  <export>
    <field_local_planner_base_plugin plugin="${prefix}/field_local_planner_plugin.xml" />
  </export>

</package>
